--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: CS 3130-001 Fall 2024
+title: CS 3130 Fall 2024
 author: Charles Reiss
 email: creiss@virginia.edu
 baseurl: "/~cr4bd/3130/F2024" # the subpath of your site, e.g. /blog
