--- a/_data/assignments.yml
+++ b/_data/assignments.yml
@@ -47,7 +47,7 @@
   due: 2024-09-27
   page: labhw/timing.html
   grade_describe: |
-    I [Reiss] expect this assignment to be mostly hand-graded (since a lot of it is hard to check automatically),
+    This assignment will be mostly hand-graded (since a lot of it is hard to check automatically),
     so there will probably not that much useful automated output below.
   submit_files:
   - timings.txt
@@ -78,10 +78,10 @@
     <ul><li>you included a `main()` function that interferes with our testing code,
     <li>you did not define both `getoutput` and `parallelgetoutput` so our testing code will link successfully, or
     <li>your code crashes due to a memory error (see section 3.1 of the assignment for advice on checking for this locally)
-    <li><small><i>[added 23 Feb:]</i></small> our testing code has trouble free()ing what you return
+    <li>our testing code has trouble free()ing what you return
     </ul>
     <p>
-    <small><i>[added 23 Feb:]</i></small> Memory errors reported below can include issues related to our testing code outputting what you return (in which case they make indicate a line number in your code related to the allocation you return).
+     Memory errors reported below can include issues related to our testing code outputting what you return (in which case they make indicate a line number in your code related to the allocation you return).
   submit_file: "fork_run.c"
   due: 2024-10-04
 
