add note about annotated slides/partial recording for last Thursday

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -23,6 +23,8 @@
   slides_ref:
   - building
   description: |
+    >  (The 12pm recording is missing the first part, but is available through Panopto via Canvas; the first part of the 2pm recording that covers what's missing from the 12pm recording is also there.)
+    
     *  .o, .a, .so files
     *  dynamic and static linking
     *  make
