expand on note above autogrades

--- a/_data/assignments.yml
+++ b/_data/assignments.yml
@@ -49,6 +49,9 @@
   grade_describe: |
     This assignment will be mostly hand-graded (since a lot of it is hard to check automatically),
     so there will probably not that much useful automated output below.
+
+    (*[added 19 Sep 2024]* there are some automated checks for whether signals are sent/received,
+    but we do not have automation for determining if you are timing the right things.)
   submit_files:
   - timings.txt
   - "*.txt"
