--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -117,8 +117,6 @@
 
     *  waiting for processes
     *  file descriptors
-    *  dup2
-    *  pipe
 
 - date: 2024-09-18
   week: 4
@@ -126,19 +124,17 @@
 
 - date: 2024-09-19
   week: 4
-  title: virtual memory 1
-  reading: "[VM](readings/vm.html) §1, 2.2, 3.1, 4"
+  title: process 3
+  reading: "[kernel](readings/kernel.html) §3.3.3; [threads](readings/thread.html)"
   slides_ref:
-  - vm
+  - unix-api
   description: |
     (Reiss out of town)
 
     (See Panopto on Canvas for videos; videos won't be posted here for some time.)
 
-    *  virtual memory concept
-        *   address space and address sizes
-    *  page tables
-    *  loading data on demand 
+    *  dup2
+    *  pipe, redirection
 
 
 - date: 2024-09-20
@@ -146,13 +142,15 @@
 
 - date: 2024-09-24
   week: 5
-  title: virtual memory 2
+  title: virtual memory 1
   reading: "[VM](readings/vm.html) §1, 2.2, 3.1"
   slides_ref:
   - vm
   description: |
-    *  copy-on-write, other "page table tricks"
-    *  storing page tables in memory
+    *  virtual memory concept
+        *   address space and address sizes
+    *  page tables
+    *  loading data on demand  (start)
 
 - date: 2024-09-25
   lab: true
@@ -160,15 +158,14 @@
 
 - date: 2024-09-26
   week: 5
-  title: virtual memory 3
+  title: virtual memory 2
   reading: "[VM](readings/vm.html) §2.1, 3.2"
   slides_ref:
   - vm
   description: |
-    *  storing page tables in memory (Finish)
-       *  pagetable assignment
-       *  as a tree
-       *  multi-level lookup example
+    *  loading data on demand  (finish)
+    *  copy-on-write, other "page table tricks" 
+    *  storing page tables in memory (start)
 
 
 - date: 2024-09-27
@@ -176,15 +173,17 @@
 
 - date: 2024-10-01
   week: 6
-  title: caches 1
-  reading: "[cache](readings/cache.html)"
+  title: virtual memory 3 / caches 0
+  reading: "[VM](readings/vm.html) §2.1, 3.2; [cache](readings/cache.html)"
   slides_ref:
   - caching
   description: |
+    *  pagetable assignment
+    *  as a tree
+    *  multi-level lookup example
+
     *  caching idea
     *  memory hierarchy
-    *  direct-mapped caches
-        *  valid bits, tags
 
 - date: 2024-10-02
   lab: true
@@ -197,6 +196,8 @@
   slides_ref:
   - caching
   description: |
+    *  direct-mapped caches
+        *  valid bits, tags
     *  set-associative caches
     *  (briefly) replacement policies
     *  cache misses and C code (start)
